# ConjuntOS

./: .gitignore  .graphifyignore  .mcp.json  .npmrc  BUGS_AUDIT.md  DEPLOYMENT_ENV.md  FEATURES.md  FUNCIONALIDADES.md  PRODUCTION_READINESS.md  REVIEW-PROD-READINESS.md  REVISION_BACKEND_2026-06-26.md  TEST_CREDENTIALS.md  _routes.json  build_log.txt  deploy.sh  dev.db  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  livekit.yaml  middleware.ts  next.config.ts  nop_log.txt  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  pnpm-lock.yaml  renew-turn-cert.sh  wrangler.toml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml
backend/.claude-flow/data/: pending-insights.jsonl
backend/api/: Cargo.toml
backend/api/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs
backend/api/tests/: api_test.rs  m4_test.rs  m5a_test.rs  m5b_test.rs
backend/migrate/: Cargo.toml
backend/migrate/src/: db.rs  idmap.rs  main.rs  report.rs  seed.rs  steps.rs  verify.rs
backend/migrations/2026-06-10-000001_core/: down.sql  up.sql
backend/migrations/2026-06-10-000002_notificaciones_push/: down.sql  up.sql
backend/migrations/2026-06-10-000003_vigilancia/: down.sql  up.sql
backend/migrations/2026-06-10-000004_parqueadero/: down.sql  up.sql
backend/migrations/2026-06-10-000005_reservas/: down.sql  up.sql
backend/migrations/2026-06-10-000006_pagos/: down.sql  up.sql
backend/migrations/2026-06-10-000007_comunicaciones/: down.sql  up.sql
backend/migrations/2026-06-10-000008_solicitudes_tramites/: down.sql  up.sql
backend/migrations/2026-06-10-000009_clasificados_inmuebles/: down.sql  up.sql
backend/migrations/2026-06-10-000010_chat/: down.sql  up.sql
backend/migrations/2026-06-10-000011_asamblea/: down.sql  up.sql
backend/migrations/2026-06-10-000012_create_subtitulos_actas/: down.sql  up.sql
backend/migrations/2026-06-11-000001_vehiculos_placa_per_conjunto/: down.sql  up.sql
backend/migrations/2026-06-11-000002_reservas_no_overlap/: down.sql  up.sql
backend/migrations/2026-06-11-000003_usuarios_password_changed_at/: down.sql  up.sql
backend/migrations/2026-06-13-000001_parqueadero_asignacion_temporal/: down.sql  up.sql
backend/migrations/2026-06-14-000001_parqueadero_categoria_solicitudes/: down.sql  up.sql
backend/migrations/2026-06-14-000002_parqueadero_aprobacion_inquilino/: down.sql  up.sql
backend/migrations/2026-06-15-000001_parqueadero_sesiones_cobro/: down.sql  up.sql
backend/migrations/2026-06-15-000002_parqueadero_cargo_aprobacion_residente/: down.sql  up.sql
backend/migrations/2026-06-15-000003_parqueadero_retencion_cargo/: down.sql  up.sql
backend/migrations/2026-06-15-000004_reservas_visitante_parqueadero/: down.sql  up.sql
backend/migrations/2026-06-16-000001_usuarios_numero_interno/: down.sql  up.sql
backend/migrations/2026-06-17-000001_correspondencia/: down.sql  up.sql
backend/migrations/2026-06-17-000001_native_push_tokens/: down.sql  up.sql
backend/migrations/2026-06-17-000002_novedades_seguridad/: down.sql  up.sql
backend/migrations/2026-06-18-000001_rondas_nfc/: down.sql  up.sql
backend/migrations/2026-06-19-000001_pases_temporales/: down.sql  up.sql
backend/migrations/2026-06-19-000002_comite_convivencia/: down.sql  up.sql
backend/migrations/2026-06-19-000003_tickets_pqrs/: down.sql  up.sql
backend/migrations/2026-06-19-000004_huesped_temporal/: down.sql  up.sql
backend/migrations/2026-06-19-000005_chat_huesped/: down.sql  up.sql
backend/migrations/2026-06-20-000001_usuarios_last_login/: down.sql  up.sql
backend/migrations/2026-06-20-000002_inmuebles_moneda/: down.sql  up.sql
backend/migrations/2026-06-20-000003_inmuebles_telefonos/: down.sql  up.sql
backend/migrations/2026-06-22-000001_recordatorios_enviados/: down.sql  up.sql
backend/migrations/2026-06-22-000002_sos/: down.sql  up.sql
backend/migrations/2026-06-22-000003_visitas_qr/: down.sql  (+1 more)
(+660 files in other folders)
