[package]
name = "enconjunto-migrate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "enconjunto-migrate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argon2 = { version = "0.5", features = ["std"] }
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
csv = "1.3"
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres = { workspace = true, features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webpki-roots.workspace = true
